# api-data-collector

./: .env.template  .gitignore  Cargo.toml  README.md  config.json
src/: config.rs  main.rs
