[package]
name = "api-data-collector"
version = "0.1.0"
authors = ["Henrik Hedlund Andersen <heheand@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.92", features = ["derive"] }
serde_json = "1.0.39"
reqwest = "0.9.17"
mongodb = "0.3.12"
tokio = "0.1.21"
futures = "0.1.27"
chrono = {version = "0.4.6", features = ["serde"]}