[package]
name = "api-data-collector"
version = "0.2.0"
authors = ["Henrik Hedlund Andersen <heheand@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.98", features = ["derive"] }
serde_json = "1.0.40"
reqwest = "0.9.19"
mongodb = "0.3.12"
chrono = {version = "0.4.7", features = ["serde"]}