[package]
name = "api-data-collector"
version = "0.2.0"
authors = ["Henrik Hedlund Andersen <heheand@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "0.5.3"
chrono = {version = "0.4.7", features = ["serde"]}
dotenv = "0.15.0"
futures = "0.3"
hyper = "0.13.1"
reqwest = "0.9.19"
serde = { version = "1.0.98", features = ["derive"] }
serde_json = "1.0.40"
tokio = { version = "0.2.8", features = ["full"] }
tokio-postgres = "0.5.1"